# datajoint-cleaner

./: .gitignore  Pipfile  README.md  datajoint-cleaner-example.toml  main.py  minio_facade.py  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: black.yml  build.yml  lint.yml  mypy.yml  test.yml
dj_cleaner/: __init__.py  __main__.py  abstract.py  clean.py  controller.py  main.py  minio_facade.py  minio_gateway.py  pymysql_facade.py  pymysql_gateway.py
dj_cleaner/adapters/: __init__.py  controller.py  interfaces.py  minio_gateway.py  pymysql_gateway.py  toml_controller.py  toml_presenter.py
dj_cleaner/frameworks/: __init__.py  minio_facade.py  pymysql_facade.py  toml_cli.py  toml_facade.py
dj_cleaner/use_cases/: __init__.py  abstract.py  clean.py  interfaces.py
tests/functional/: test_clean.py
tests/unit/adapters/: conftest.py  test_clean_use_case.py  test_minio_gateway.py  test_pymysql_gateway.py  test_toml_presenter.py
tests/unit/frameworks/: test_toml_cli.py
tests/unit/use_cases/: test_abstract_use_cases.py  test_clean_use_case.py
