[project]
name = "datajoint-cleaner"
version = "0.0"
description = "A tool for cleaning up external DataJoint stores"
authors = [
    {name = "Christoph Blessing", email = "chris.blessing@protonmail.com"},
]
dependencies = [
    "minio~=7.0",
    "pymysql~=1.0",
    "toml~=0.10",
]
dev-dependencies = [
    "docker~=4.4",
    "datajoint~=0.12",
    "pytest~=6.2",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "GPL-3.0-only"}

[project.urls]
homepage = "https://github.com/sinzlab/datajoint-cleaner"

[tool]
[tool.pdm]
[tool.black]
line-length = 120
[tool.pylint.master]
max-line-length = 120
ignore-patterns = "test_.*?\\.py"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
