[pycodestyle]
max-line-length = 120

[flake8]
max-line-length = 120

[metadata]
name = datajoint-cleaner
version = 0.0
url = https://github.com/sinzlab/datajoint-cleaner
author = Christoph Blessing
author_email = chris.blessing@protonmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Database
license = GNU GPLv3
license_file = LICENSE
description = A tool for cleaning up external DataJoint stores
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8
install_requires=
    minio
    pymysql
